<resources>
    <string name="app_name">HelloWorld</string>
    <string name="textview">TextView</string>
    <string name="ayy_lmao">ayy lmao</string>
    <string name="operand_1">Operand 1</string>
    <string name="operand_2">Operand 2</string>
    <string name="result">Result</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
</resources>
