<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.reughdurgem.helloworld.CalculatorMainActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/num1"
        android:layout_width="168dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/operand_1"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toStartOf="@+id/num2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="168dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/operand_2"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="344dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/result"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/add"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/sub"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/sub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/mult"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/mult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sub"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/div"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mult"
        app:layout_constraintTop_toBottomOf="@+id/result" />

</android.support.constraint.ConstraintLayout>
